Refactor: Mudança do `.trim()` para o `.split()`.